# interviewTasks

./: CMakeLists.txt  README.md
includes/: FlowerProcessor.h  IFlower.h
sources/: FlowerProcessor.cpp  IFlower.cpp
tests/: FlowerProcessorTest.cpp
